First compilable verson after migration to Minecraft 1.20